[#998] refactor: improve error message formatting for file upload validation by reusing file upload element description method